--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
         </div>
       </div>
       <div>
-        <!-- <div class="title-head">
-          <h1 class="text-head">اطلاعات کاربری</h1>
-        </div> -->
         <form class="form">
           <div class="form-input fullname">
             <input
@@ -101,7 +98,7 @@
           </div>
 
           <div class="form-input gender">
-            <label>جنسیت</label>
+            <label> جنسیت:</label>
             <div class="fullname-input">
               <input
                 id="gender-m"
