--- a/index.html
+++ b/index.html
@@ -7,224 +7,260 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <div class="main-container">
-      <div>
-        <div class="profile">
-          <div class="img-profile">
-            <label class="label-img">
-              <img
-                src="./img/image.png"
-                alt="img"
-                width="150px"
-                height="150px"
-                class="img"
-              />
-            </label>
-            <label class="label-checkbox-input" role="button">
-              <input type="checkbox" class="input-checkbox-img" />
-              <svg
-                class="icon-fullscreen"
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M3 21v-5h2v3h3v2zm13 0v-2h3v-3h2v5zM3 8V3h5v2H5v3zm16 0V5h-3V3h5v5z"
-                />
-              </svg>
-              <div class="img-zoom-in">
-                <img src="/img/image.png" width="300px" height="300px" />
+    <div class="all-profile">
+      <div class="darkmode">
+        <input id="checkbox-darkmode" type="checkbox" class="input-darkmode" />
+        <label class="label-darkmode" for="checkbox-darkmode"></label>
+
+        <div class="main-container">
+          <div>
+            <div class="profile">
+              <div class="img-profile">
+                <label class="label-img">
+                  <img
+                    src="./img/image.png"
+                    alt="img"
+                    width="150px"
+                    height="150px"
+                    class="img"
+                  />
+                </label>
+                <div class="label-checkbox-input">
+                  <input
+                    id="checkbox-img"
+                    type="checkbox"
+                    class="input-checkbox-img"
+                  />
+                  <label for="checkbox-img" class="label-checkbox-input">
+                    <svg
+                      class="icon-fullscreen"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        fill="currentColor"
+                        d="M3 21v-5h2v3h3v2zm13 0v-2h3v-3h2v5zM3 8V3h5v2H5v3zm16 0V5h-3V3h5v5z"
+                      />
+                    </svg>
+                  </label>
+                  <label for="checkbox-img" class="close-image">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        fill="currentColor"
+                        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m3.59-13L12 10.59L8.41 7L7 8.41L10.59 12L7 15.59L8.41 17L12 13.41L15.59 17L17 15.59L13.41 12L17 8.41z"
+                      />
+                    </svg>
+                  </label>
+                  <div class="img-zoom-in">
+                    <img src="/img/image.png" width="300px" height="300px" />
+                  </div>
+                </div>
               </div>
-            </label>
+              <div class="profile-label">
+                <label role="button" class="label delete-img" title="حذف  فایل">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+                    />
+                  </svg>
+                  حذف عکس
+                </label>
+                <label class="label add-img" role="button">
+                  <span class="input-add-img">
+                    <input
+                      class="input-file"
+                      type="file"
+                      title="انتخاب فایل"
+                      accept="image/jpg , image/png , image/jpeg"
+                    />
+                  </span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z"
+                    />
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z"
+                    />
+                  </svg>
+                  عکس جدید
+                </label>
+              </div>
+            </div>
           </div>
-          <div class="profile-label">
-            <label role="button" class="label delete-img" title="حذف  فایل">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
-                />
-              </svg>
-              حذف عکس
-            </label>
-            <label class="label add-img" role="button">
-              <span class="input-add-img">
-                <input
-                  class="input-file"
-                  type="file"
-                  title="انتخاب فایل"
-                  accept="image/jpg , image/png , image/jpeg"
-                />
-              </span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z"
-                />
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z"
-                />
-              </svg>
-              عکس جدید
-            </label>
+          <div>
+            <form class="form">
+              <div class="input-form fullname">
+                <label class="label-input">
+                  نام
+                  <br />
+                  <input
+                    type="text"
+                    placeholder="نام"
+                    class="input input-name"
+                    required
+                  />
+                </label>
+                <label class="label-input">
+                  نام خانوادگی
+                  <input
+                    type="text"
+                    placeholder="نام خانوادگی"
+                    class="input input-name"
+                    required
+                  />
+                </label>
+              </div>
+
+              <div class="input-form">
+                <label class="label-input">
+                  تاریخ تولد
+                  <input
+                    type="date"
+                    placeholder="تاریخ تولد"
+                    class="input date-input"
+                  />
+                </label>
+              </div>
+
+              <div class="input-form gender">
+                <label> جنسیت:</label>
+                <label class="gender-input">
+                  <input
+                    type="radio"
+                    class="gender-confirm-male"
+                    name="gender"
+                  />
+                  آقا
+                </label>
+                <label class="gender-input">
+                  <input
+                    type="radio"
+                    class="gender-confirm-female"
+                    name="gender"
+                  />
+                  خانم
+                </label>
+              </div>
+
+              <div class="input-form">
+                <label class="label-input">
+                  شماره همراه
+                  <input
+                    type="number"
+                    placeholder="شماره تلفن همراه"
+                    maxlength="10"
+                    class="input"
+                    dir="ltr"
+                  />
+                </label>
+              </div>
+
+              <div class="input-form">
+                <label class="label-input">
+                  تلفن ثابت
+                  <input
+                    type="number"
+                    placeholder="تلفن ثابت"
+                    maxlength="10"
+                    class="input num-static"
+                    dir="ltr"
+                  />
+                </label>
+              </div>
+
+              <div class="input-form shaba">
+                <h6 class="shaba-icon">IR</h6>
+                <label class="label-input">
+                  شماره شبا کارت
+                  <input
+                    type="number"
+                    placeholder="شماره شبا کارت"
+                    maxlength="24"
+                    class="input shaba-num"
+                    required
+                    dir="ltr"
+                  />
+                </label>
+              </div>
+              <div class="input-form">
+                <label class="label-input">
+                  کد ملی
+                  <input
+                    type="number"
+                    placeholder="کد ملی"
+                    maxlength="10"
+                    class="input natianal-code"
+                    dir="ltr"
+                  />
+                </label>
+              </div>
+
+              <div class="input-form">
+                <label class="label-input">
+                  پست الکترونیکی
+                  <input
+                    class="input email"
+                    type="email"
+                    placeholder="پست الکترونیکی"
+                  />
+                </label>
+              </div>
+
+              <div class="input-form">
+                <label class="label-input">
+                  کد پستی
+                  <input
+                    type="number"
+                    placeholder="کد پستی"
+                    class="input postal-code"
+                    dir="ltr"
+                  />
+                </label>
+              </div>
+              <label class="label-input">
+                آدرس
+                <textarea placeholder="آدرس" class="input"></textarea>
+              </label>
+            </form>
+          </div>
+
+          <div class="add-change">
+            <button class="button-add-change" type="button">
+              ذخیره تغییرات
+            </button>
           </div>
         </div>
-      </div>
-      <div>
-        <form class="form">
-          <div class="input-form fullname">
-            <label class="label-input">
-              نام
-              <br />
-              <input
-                type="text"
-                placeholder="نام"
-                class="input input-name"
-                required
-              />
-            </label>
-            <label class="label-input">
-              نام خانوادگی
-              <input
-                type="text"
-                placeholder="نام خانوادگی"
-                class="input input-name"
-                required
-              />
-            </label>
-          </div>
-
-          <div class="input-form">
-            <label class="label-input">
-              تاریخ تولد
-              <input
-                type="date"
-                placeholder="تاریخ تولد"
-                class="input date-input"
-              />
-            </label>
-          </div>
-
-          <div class="input-form gender">
-            <label> جنسیت:</label>
-            <label class="gender-input">
-              <input type="radio" class="gender-confirm-male" name="gender" />
-              آقا
-            </label>
-            <label class="gender-input">
-              <input type="radio" class="gender-confirm-female" name="gender" />
-              خانم
-            </label>
-          </div>
-
-          <div class="input-form">
-            <label class="label-input">
-              شماره همراه
-              <input
-                type="number"
-                placeholder="شماره تلفن همراه"
-                maxlength="10"
-                class="input"
-                dir="ltr"
-              />
-            </label>
-          </div>
-
-          <div class="input-form">
-            <label class="label-input">
-              تلفن ثابت
-              <input
-                type="number"
-                placeholder="تلفن ثابت"
-                maxlength="10"
-                class="input num-static"
-                dir="ltr"
-              />
-            </label>
-          </div>
-
-          <div class="input-form shaba">
-            <h6 class="shaba-icon">IR</h6>
-            <label class="label-input">
-              شماره شبا کارت
-              <input
-                type="number"
-                placeholder="شماره شبا کارت"
-                maxlength="24"
-                class="input shaba-num"
-                required
-                dir="ltr"
-              />
-            </label>
-          </div>
-          <div class="input-form">
-            <label class="label-input">
-              کد ملی
-              <input
-                type="number"
-                placeholder="کد ملی"
-                maxlength="10"
-                class="input natianal-code"
-                dir="ltr"
-              />
-            </label>
-          </div>
-
-          <div class="input-form">
-            <label class="label-input">
-              پست الکترونیکی
-              <input
-                class="input email"
-                type="email"
-                placeholder="پست الکترونیکی"
-              />
-            </label>
-          </div>
-
-          <div class="input-form">
-            <label class="label-input">
-              کد پستی
-              <input
-                type="number"
-                placeholder="کد پستی"
-                class="input postal-code"
-                dir="ltr"
-              />
-            </label>
-          </div>
-          <label class="label-input">
-            آدرس
-            <textarea placeholder="آدرس" class="input"></textarea>
-          </label>
-        </form>
-      </div>
-
-      <div class="add-change">
-        <button class="button-add-change" type="button">ذخیره تغییرات</button>
       </div>
     </div>
   </body>
